--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,8 @@ keycloak.credentials.secret = 11111111-1111-1111-1111-111111111111
 keycloak.securityConstraints[0].securityCollections[0].name = spring secured api
 keycloak.securityConstraints[0].securityCollections[0].authRoles[0] = USERS
 keycloak.securityConstraints[0].securityCollections[0].patterns[0] = /api/ola-secured
+
+
+cxf.path=/
+cxf.jaxrs.component-scan=true
+cxf.jaxrs.classes-scan-packages=com.redhat.developers.msa
