--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,6 @@
-<?xml version="1.0" encoding="UTF-8"?><!--
-	JBoss, Home of Professional Open Source
-	Copyright 2016, Red Hat, Inc. and/or its affiliates, and individual
-	contributors by the @authors tag. See the copyright.txt in the
-	distribution for a full listing of individual contributors.
-
-	Licensed under the Apache License, Version 2.0 (the "License");
-	you may not use this file except in compliance with the License.
-	You may obtain a copy of the License at
-	http://www.apache.org/licenses/LICENSE-2.0
-	Unless required by applicable law or agreed to in writing, software
-	distributed under the License is distributed on an "AS IS" BASIS,
-	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-	See the License for the specific language governing permissions and
-	limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -26,46 +12,30 @@
 	<name>ola</name>
 	<description>Demo project for Spring Boot</description>
 
-	
+
 
 	<properties>
-
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-		<!-- maven-compiler-plugin -->
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-
-		<!-- other plugin versions -->
-		<keycloak.version>2.4.0.Final</keycloak.version>
-		<openfeign.version>9.4.0</openfeign.version>
-		<openfeign.opentracing.version>0.0.3</openfeign.opentracing.version>
-		<io.opentracing.version>0.22.0</io.opentracing.version>
-		<io.opentracing.contrib.spring.autoconfigure.version>0.0.4</io.opentracing.contrib.spring.autoconfigure.version>
-		<swagger.version>1.5.8</swagger.version>
-		<springfox.version>2.4.0</springfox.version>
-		<version.jaeger>0.19.0</version.jaeger>
-		<!-- Setting the image explicity to use redhat-openjdk -->
-		<!-- There is kind of issue honoring JAVA_OPTIONS with fabric8-s2i images -->
 		<fabric8.generator.from>fabric8/s2i-java</fabric8.generator.from>
-		
-		<spring-boot.version>2.1.13.RELEASE</spring-boot.version>
-        <spring-boot-maven-plugin.version>2.1.13.RELEASE</spring-boot-maven-plugin.version>
-		
+		<spring-boot.version>2.1.4.RELEASE-redhat-00001</spring-boot.version>
+		<spring-boot-maven-plugin.version>2.1.4.RELEASE-redhat-00001</spring-boot-maven-plugin.version>
+		<version.fabric8.plugin>3.1.80.redhat-000037</version.fabric8.plugin>
 	</properties>
 
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>me.snowdrop</groupId>
-        <artifactId>spring-boot-bom</artifactId>
-        <version>2.1.13.Final-redhat-00001</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>me.snowdrop</groupId>
+				<artifactId>spring-boot-bom</artifactId>
+				<version>2.1.13.Final-redhat-00001</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
 		<dependency>
@@ -77,78 +47,73 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.keycloak</groupId>
-			<artifactId>keycloak-spring-boot-adapter</artifactId>
-			<version>${keycloak.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.keycloak</groupId>
-			<artifactId>keycloak-tomcat8-adapter</artifactId>
-			<version>${keycloak.version}</version>
-		</dependency>
-
-		<!-- Swagger -->
-		<dependency>
-			<groupId>io.swagger</groupId>
-			<artifactId>swagger-jaxrs</artifactId>
-			<version>${swagger.version}</version>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework</groupId>
+					<artifactId>spring-webmvc</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 
-		
 	</dependencies>
 
 	<build>
 		<finalName>ola</finalName>
 		<plugins>
 			<plugin>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-maven-plugin</artifactId>
-            <version>${spring-boot-maven-plugin.version}</version>
-            <executions>
-                <execution>
-                    <goals>
-                        <goal>repackage</goal>
-                    </goals>
-                </execution>
-              </executions>
-            <configuration>
-                <redeploy>true</redeploy>
-            </configuration>
-        </plugin>
-			<plugin>
-				<groupId>io.fabric8</groupId>
-				<artifactId>fabric8-maven-plugin</artifactId>
-				<version>3.5.30</version>				
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>${spring-boot-maven-plugin.version}</version>
 				<executions>
 					<execution>
-						<id>fmp</id>
 						<goals>
-							<goal>resource</goal>
-							<goal>helm</goal>
-							<goal>build</goal>
+							<goal>repackage</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<groupId>io.fabric8</groupId>
+				<artifactId>fabric8-maven-plugin</artifactId>
+                <version>${version.fabric8.plugin}</version>				
+					<executions>
+						<execution>
+							<id>fmp</id>
+							<goals>
+								<goal>resource</goal>
+								<goal>build</goal>
+							</goals>
+						</execution>
+					</executions>
+					<configuration>
+						<generator>
+							<config>
+								<spring-boot>
+								</spring-boot>
+							</config>
+						</generator>
+					</configuration>
+			</plugin>
 		</plugins>
 	</build>
-	
- <!-- Specify the repositories containing Spring Boot artifacts. -->
-  <repositories>
-    <repository>
-      <id>redhat-ga</id>
-      <name>Red Hat GA Repository</name>
-      <url>https://maven.repository.redhat.com/ga/</url>
-    </repository>
-  </repositories>
 
-  <!-- Specify the repositories containing the plugins used to execute the build of your application. -->
-  <pluginRepositories>
-    <pluginRepository>
-      <id>redhat-ga</id>
-      <name>Red Hat GA Repository</name>
-      <url>https://maven.repository.redhat.com/ga/</url>
-    </pluginRepository>
-  </pluginRepositories>
+	<repositories>
+		<repository>
+			<id>redhat-ga</id>
+			<name>Red Hat GA Repository</name>
+			<url>https://maven.repository.redhat.com/ga/</url>
+		</repository>
+	</repositories>
+
+
+	<pluginRepositories>
+		<pluginRepository>
+			<id>redhat-ga</id>
+			<name>Red Hat GA Repository</name>
+			<url>https://maven.repository.redhat.com/ga/</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 </project>
